clusters/svc.ez.soeren.cloud/synapse/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: synapse
  labels:
    name: synapse
