clusters/svc.ez.soeren.cloud/synapse/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse
  namespace: synapse
spec:
  hosts:
    - synapse.svc.ez.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: synapse.synapse.svc.cluster.local
            port:
              number: 8008
